@@ -14,6 +14,8 @@ config.h.in
 Makefile.in
 install-sh
 
+eg/c-sample.c
+
 src/Makefile.in
 src/libptytty.h
 src/ptytty_conf.h
