@@ -38,6 +38,6 @@ using namespace std;
  * (must exit), or warning conditions (only print message)
  * TODO move elsewhere, e.g. util.C
  */
-#define ptytty_fatal(msg) do { ptytty_warn (msg); _exit (1); } while (0)
-#define ptytty_warn(msg) fprintf (stderr, msg) // TODO
+#define ptytty_fatal(msg) do { ptytty_warn ("%s", msg); _exit (1); } while (0)
+#define ptytty_warn(msg,arg) fprintf (stderr, msg, arg) // TODO
 
